--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,4 @@
-rules_version = '2'; service cloud.firestore { match /databases/{database}/documents { match /{document=**} { allow read, write: if request.auth != null } } }
+.leaflet-container {
+    width: 100vw;
+    height: 100vh;
+  }
